--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="forest">
+<html lang="en" data-theme="dracula">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Frontend Starter React</title>
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <title>Dofiltra</title>
+    <meta name="description" content="" />
   </head>
   <body>
     <noscript>Please, turn on JavaScript to see this page.</noscript>
